--- a/foodie_dev/foodie-api/pom.xml
+++ b/foodie_dev/foodie-api/pom.xml
@@ -7,10 +7,14 @@
         <groupId>com.imooc</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>foodie-api</artifactId>
-
+    <!--打包war[1]-->
+    <packaging>pom</packaging>
+    <modules>
+        <module>web</module>
+    </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
